--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,13 @@ mybatis.configuration.default-statement-timeout=3000
 # 扫描接口类 XML
 mybatis.mapperLocations = classpath:com/lucasma/seckill/dao/*.xml
 
-
+#redis
+redis.host=47.97.177.125
+redis.port=6379
+redis.timeout=10
+redis.password=123456
+redis.poolMaxTotal=1000
+redis.poolMaxIdle=500
 # druid
 spring.datasource.url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
