--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML5
 pageCache.enbale=true
+spring.devtools.restart.enabled=true
+
 
 # mybatis
 mybatis.type-aliases-package=com.lucasma.seckill.domain
@@ -25,6 +27,7 @@ redis.timeout=10
 redis.password=123456
 redis.poolMaxTotal=1000
 redis.poolMaxIdle=500
+redis.poolMaxWait=500
 # druid
 spring.datasource.url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
